@@ -36,13 +36,13 @@ public class TaxSensitiveMoneyDbOperationsTestCase extends AbstractDaoTestCase {
         assertEquals("Incorrect amount.", new BigDecimal("1000.0000"), instance2.getMoney().getAmount());
         assertEquals("Incorrect tax amount.", new BigDecimal("166.6700"), instance2.getMoney().getTaxAmount());
         assertEquals("Incorrect ex-tax amount.", new BigDecimal("833.3300"), instance2.getMoney().getExTaxAmount());
-        assertEquals("Incorrect tax percent.", new Integer("20"), instance2.getMoney().getTaxPercent());
+        assertEquals("Incorrect tax percent.", Integer.valueOf("20"), instance2.getMoney().getTaxPercent());
 
         final EntityWithTaxMoney instance3 = dao.findByKey("aname1");
         assertEquals("Incorrect amount.", new BigDecimal("100.0000"), instance3.getMoney().getAmount());
         assertEquals("Incorrect tax amount.", new BigDecimal("9.0900"), instance3.getMoney().getTaxAmount());
         assertEquals("Incorrect ex-tax amount.", new BigDecimal("90.9100"), instance3.getMoney().getExTaxAmount());
-        assertEquals("Incorrect tax percent.", new Integer("10"), instance3.getMoney().getTaxPercent());
+        assertEquals("Incorrect tax percent.", Integer.valueOf("10"), instance3.getMoney().getTaxPercent());
     }
 
     @Test
@@ -60,7 +60,7 @@ public class TaxSensitiveMoneyDbOperationsTestCase extends AbstractDaoTestCase {
         assertEquals("Incorrect amount.", new BigDecimal("2222.0000"), instance2.getMoney().getAmount());
         assertEquals("Incorrect tax amount.", new BigDecimal("370.3300"), instance2.getMoney().getTaxAmount());
         assertEquals("Incorrect ex-tax amount.", new BigDecimal("1851.6700"), instance2.getMoney().getExTaxAmount());
-        assertEquals("Incorrect tax percent.", new Integer("20"), instance2.getMoney().getTaxPercent());
+        assertEquals("Incorrect tax percent.", Integer.valueOf("20"), instance2.getMoney().getTaxPercent());
     }
 
 
@@ -79,7 +79,7 @@ public class TaxSensitiveMoneyDbOperationsTestCase extends AbstractDaoTestCase {
         assertEquals("Incorrect amount.", new BigDecimal("600000.0000"), instance2.getMoney().getAmount());
         assertEquals("Incorrect tax amount.", new BigDecimal("100000.0000"), instance2.getMoney().getTaxAmount());
         assertEquals("Incorrect ex-tax amount.", new BigDecimal("500000.0000"), instance2.getMoney().getExTaxAmount());
-        assertEquals("Incorrect tax percent.", new Integer("20"), instance2.getMoney().getTaxPercent());
+        assertEquals("Incorrect tax percent.", Integer.valueOf("20"), instance2.getMoney().getTaxPercent());
     }
 
     @Override
